force-app/main/default/objects/ProjectLineItem__c/ProjectLineItem__c.object-meta.xml
<CustomObject>
    <label>Project Product</label>
    <nameField>
        <displayFormat>PLT-{0000}</displayFormat>
        <label>Project Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>