force-app/main/default/objects/ProjectLineItem__c/fields/Ammount__c.field-meta.xml
<CustomField>
    <fullName>Ammount__c</fullName>
    <label>Ammount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>