force-app/main/default/objects/ProjectLineItem__c/fields/Quantity_hours__c.field-meta.xml
<CustomField>
    <fullName>Quantity_hours__c</fullName>
    <label>Quantity-hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>