force-app/main/default/objects/ProjectLineItem__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Product Manager</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
                <isActive>false</isActive>
                <label>Consultor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>